# apex

./: .gitignore  CMakeLists.txt  GxWireFormat.proto  README.md
cmake/: FindLibProtobuf3.cmake  FindLibcurl.cmake  MakeDebPackages.cmake  config.h.incmake
docs/: installation.md  quick_start.md
python/: fetch_binance_refdata.py  generate-refdata.sh  parse_binance_refdata.py
python/apex/: logging.py
python/tmp/: binance_assets.csv  binance_coinfut_exchange-info.json  binance_usdfut_exchange-info.json
scripts/: build_libcurl.sh  build_libuv.sh  build_protobuf3.sh  configure_cmake.sh  depends.env  generate_protobuf.sh  show_cmake_options_for_clion.sh
src/apex/: CMakeLists.txt
src/apex-gx/: CMakeLists.txt  apex-gx-paper.cpp  apex-gx-sim.json  apex-gx.cpp
src/apex/backtest/: SimExchange.cpp  SimExchange.hpp  TardisCsvParsers.cpp  TardisCsvParsers.hpp  TardisFileReader.cpp  TardisFileReader.hpp  TickFileReader.cpp  TickFileReader.hpp  TickFileWriter.cpp  TickFileWriter.hpp  TickReplayer.cpp  TickReplayer.hpp  TickbinFileReader.cpp  TickbinFileReader.hpp  TickbinMsgs.cpp  TickbinMsgs.hpp
src/apex/comm/: GxClientSession.cpp  GxClientSession.hpp  GxServerSession.cpp  GxServerSession.hpp  GxSessionBase.cpp  GxSessionBase.hpp  GxWireFormat.pb.cc  GxWireFormat.pb.h
src/apex/core/: Alert.cpp  Alert.hpp  Auditor.cpp  Auditor.hpp  BacktestService.cpp  BacktestService.hpp  Bot.cpp  Bot.hpp  Errors.hpp  GatewayService.cpp  GatewayService.hpp  Logger.cpp  Logger.hpp  MarketDataService.cpp  MarketDataService.hpp  MockMatchingEngine.cpp  MockMatchingEngine.hpp  OrderRouter.cpp  OrderRouter.hpp  OrderRouterService.cpp  OrderRouterService.hpp  OrderService.cpp  OrderService.hpp  PersistenceService.cpp  PersistenceService.hpp  RefDataService.cpp  RefDataService.hpp  Services.cpp  Services.hpp  Strategy.cpp  Strategy.hpp  StrategyMain.cpp  StrategyMain.hpp
src/apex/demo/: DemoMakerBot.cpp  DemoMakerBot.hpp
src/apex/gx/: BinanceSession.cpp  BinanceSession.hpp  ExchangeSession.hpp  GxServer.cpp  GxServer.hpp
src/apex/infra/: DecodeBuffer.cpp  DecodeBuffer.hpp  HttpParser.cpp  HttpParser.hpp  IoLoop.cpp  IoLoop.hpp  Reactor.cpp  Reactor.hpp  SocketAddress.cpp  SocketAddress.hpp  SslSocket.cpp  SslSocket.hpp  TcpConnector.cpp  TcpConnector.hpp  TcpSocket.cpp  TcpSocket.hpp  UvErr.cpp  UvErr.hpp  WebsocketClient.cpp  WebsocketClient.hpp  WebsocketProtocol.cpp  WebsocketProtocol.hpp  WebsocketppImpl.cpp  WebsocketppImpl.hpp  ssl.cpp  ssl.hpp
src/apex/model/: Account.cpp  Account.hpp  ExchangeId.cpp  ExchangeId.hpp  Instrument.cpp  Instrument.hpp  MarketData.cpp  MarketData.hpp  Order.cpp  Order.hpp  Position.cpp  Position.hpp  StrategyId.cpp  StrategyId.hpp  tick_msgs.hpp
src/apex/util/: BacktestEventLoop.cpp  BacktestEventLoop.hpp  BufferedFileReader.hpp  Config.cpp  Config.hpp  Error.hpp  EventLoop.cpp  EventLoop.hpp  GzFile.cpp  GzFile.hpp  RealtimeEventLoop.cpp  RealtimeEventLoop.hpp  StopFlag.cpp  StopFlag.hpp  Time.cpp  Time.hpp  json.cpp  json.hpp  platform.cpp  platform.hpp  rx.hpp  utils.cpp  utils.hpp
src/examples/: CMakeLists.txt
src/examples/demo_market_maker/: CMakeLists.txt  apex-algo-demo-market-maker.cpp  demo-market-maker.json
src/examples/skeleton/: CMakeLists.txt  apex-algo-skeleton.cpp  skeleton.json
src/examples/sockets/: CMakeLists.txt  tcp-socket-client.cpp  tcp-socket-server.cpp
src/examples/standalone/: CMakeLists.txt  apex-demo-simple-market-maker.cpp  apex-demo-single-order.cpp  standalone_algo.cpp  standalone_algo_backtest.cpp
src/examples/websocket_client/: CMakeLists.txt  websocket_client.cpp
src/tests/: CMakeLists.txt  quicktest.hpp  test-cert.pem  test-private.pem  test_runner.cpp  test_sockets.cpp
src/tick-collector/: CMakeLists.txt  apex-tick-collector.cpp  apex-tick-tool.cpp
src/tools/: CMakeLists.txt
src/tools/ticktail/: CMakeLists.txt  ticktail.cpp
